Issue 11004.   Fixed the layout issue with the navigation links.  Approved by Jerome and reviewed by Anissa.
svn path=/trunk/; revision=34484


Former-commit-id: bef9458e513e1ff97436c7e6c0751e11948b0f3b

--- a/v3/admingui/common/src/main/resources/sysnet/support.css
+++ b/v3/admingui/common/src/main/resources/sysnet/support.css
@@ -117,8 +117,12 @@ a:hover{text-decoration:underline;}
 .previous {
     color: #16387c;
     font-size: 1.4em;
-    padding: 10px;
+    padding: 15px;
 }
+.moreInfo {
+    padding: 20px;
+}
+
 .previous:hover {text-decoration:underline;}
 .next {
     color: #16387c;
